--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <img src="./images/Jain_A_25.jpg" class="rounded float-right img-fluid" alt="...">
           <br>
           I am an MS Mechanical Engineer from the University of Massachusetts, Amherst. I'll be working with <a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank">Intel Corporation.</a> 
-          as a Cross Module Support Operational Engineer from March 15, 2021. I recently ended my full-time with <a href="https://www.exceldryer.com/" target="_blank">Excel Dryer</a> part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab"
+          as a Senior Process Engineer from March 15, 2021. I recently ended my full-time with <a href="https://www.exceldryer.com/" target="_blank">Excel Dryer</a> part-time as an Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab"
             target="_blank">ADDFab Lab</a> in Life Sciences Laboratories - UMass
           Amherst. I am focusing on Product and Process Design & Development, Lean Manufacturing & Industrial Automation
           and am always looking for new projects.
