--- a/Intel_new.html
+++ b/Intel_new.html
@@ -108,7 +108,7 @@
 
         <section class="section" style="padding-top: 100px; padding-bottom: 5px;">
             <div class="container">
-                <h1 class="title">  Cross Module Support Operational Engineer @ Intel</h1>
+                <h1 class="title">  Senior Process Engineer - Intel Corportation</h1>
                 <hr />
             </div>
         </section>
@@ -116,7 +116,7 @@
           <div class="container">
             <div class="card text-center " style="width: auto;">
               <div class="card-body">
-                <a href="#" class="btn btn-dark btn-large"><b>Duration:</b> March 2021 - To date</a>
+                <a href="#" class="btn btn-dark btn-large"><b>Duration:</b> March 2021 - To Date</a>
                 <a href="#" class="btn btn-dark btn-large"><b>Location:</b> Oregon, USA</a>
                 <a href="https://www.intel.com/content/www/us/en/homepage.html" class="btn btn-dark btn-large"><b>Website:</b> Intel Corporation</a>
               </div>
@@ -133,18 +133,17 @@
             <div class="col">
               <img class="d-block w-50 mx-auto" src="./images/asmitjainIntel1.jpg"alt="First slide">
             </div>
-          </div>
-          <!--  
+          </div>  
           <div class="row gx-5 pt-4">
             <div class="col">
               <h4 class="card-title">Highlights & Achievements</h4>
-              <div class="p-3 border bg-light">• Designed and prototyped a water-proof dryer optics, that is submersible upto 30min, to avoid damages/faults due to corrosion.
+              <div class="p-3 border bg-light">• Secured a position in the top 50 of Intel's Shark Tank with 2 papers addressing intricate challenges in supply chain & material handling.
                 <br>
-                <br>• Developed a low-cost testing fixture for performing electrical & Hi-Pot testing for a new product line. Its unique design can test existing products resulting in less setup time during mass-production.
+                <br>• Achieved savings exceeding $150,000 in a span of two years by creating troubleshooting guides for a specialized machine in collaboration with technicians and suppliers.
                 <br>
-                <br>• Started Environmental Testing for all the components to evaluate the performance at varied temperature/ humidity. It will let company to export products to countries with varied environmental conditions.
+                <br>• Conducted audits in Dublin & New Mexico to qualify 8 machines for a new factories, ultimately granting approval for the production run.
                 <br>
-                <br>• Collaborated as an essential employee in the rapid production of new products to fight COVID pandemic. From getting new parts, deciding packing, planning schedules, and complying products with safety/ quality certification within a month was a fantastic experience. 
+                <br>• Addressed a particle issue impacting FOUPs valued at $3 million, successfully troubleshooting and implementing a cleaning solution in collaboration with suppliers
                 <br>
               </div>
 
@@ -153,16 +152,12 @@
               <h4 class="card-title"> Software & Skills</h4>
               <div class="bg-white">
                 <button type="button" class="btn btn-outline-secondary m-2">SolidWorks</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Programming: C, Arduino, Python</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Extensive Data Analysis</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Raspberry Pi, Arduino</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Injection Molding & CNC</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Prototyping</button>
-                <button type="button" class="btn btn-outline-secondary m-2">3D Printing: FDM, PolyJet, SLA</button>
+                <button type="button" class="btn btn-outline-secondary m-2">Programming & Scripting: Arduino, Python, SQL</button>
+                <button type="button" class="btn btn-outline-secondary m-2">Data Analysis: MS Excel, JMP, SPC</button>
+                <button type="button" class="btn btn-outline-secondary m-2">3D Printing & Prototyping</button>
+                <button type="button" class="btn btn-outline-secondary m-2">Supplier Management</button>
                 <button type="button" class="btn btn-outline-secondary m-2">Troubleshooting</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Electrical & Safety: UL, CSA, CE, GMark</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Vendor Management</button>
-                <button type="button" class="btn btn-outline-secondary m-2">Hardware Integration</button>
+                <button type="button" class="btn btn-outline-secondary m-2">Documentation</button>
               </div>
             </div>
           </div>
@@ -171,20 +166,18 @@
               <h4 class="card-title">Roles & Responsibilities</h4>
               <div class="p-3 border">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item bg-light">Managing CAD modelling and testing for all pilot fixtures to help production people to reduce cycle time. Implementing DFA & DFM principles and integrating electrical components for validating the conceptual design and its mechanisms.</li>
-                  <li class="list-group-item">Aiding in product’s programming and controlling languages to understand, evaluate and modify the its behavior and improve its performance.   </li>
-                  <li class="list-group-item bg-light">Collaborating in research & development of new products with cross functional teams like quality, production, planning and sales. Redesigning & modifying existing models based on their performance and evaluation.</li>
-                  <li class="list-group-item">Assisting in Electromagnetic Compatibility devices and Low Voltage Devices certifications for different countries, performing modifications to certify the products. Focusing on UL, ULc, CE, GMark, etc.</li>
-                  <li class="list-group-item bg-light">Perform troubleshooting of tools and devices used in production lines and provide full technical support by improving and refurbishing components with RCA, DFMEA & PFMEA.   </li>
-                  <li class="list-group-item">Designing different components and promoting rapid prototyping using in-house 3D printing and conventional machining facilities like bed mill, lathe, etc. Enjoying hands-on machines and learning about various machine shop tools, CNC code and materials.   </li>
-                  <li class="list-group-item bg-light"> Assisting in Electromagnetic Compatibility devices and Low Voltage Devices certification for different countries, performing modifications to certify the products. Focusing on UL, ULc, CE, GMark, etc.</li>
-                  <li class="list-group-item"> Interacting with vendors and suppliers to develop high quality parts, from developing tools/ fixture for mass production to CNC, injection molded, 3D printed parts.   </li>
-                  <li class="list-group-item"> Developing in-house testing rigs for key specs to check the product’s quality, safety and performance. Implementing DOE principles to keep track of the testing procedures for traceability and consistency with complete documentation. </li>
+                  <li class="list-group-item bg-light">Developed and qualified a new automated vision inspection software to identify defects in 50000+ prod FOUPs/ wafer containers.</li>
+                  <li class="list-group-item"> Responsible for sustaining, development, maintenance of 35+ wafer processing support tools like FOUP Washers, Loadport Aligners and FOUP Particle Checkers at Technology Development site. </li>
+                  <li class="list-group-item bg-light">Developed electronic FOUP by CAD modelling and 3D Printing to measure mini-environment on wafer processing tools.</li>
+                  <li class="list-group-item">Introduced a loadport alignment solution across 10,000+ wafer processing tools at 5 Intel sites, enhancing quality and safety. Collaborated with the supplier to acquire over 20 tools, successfully negotiating a savings of $25,000.</li>
+                  <li class="list-group-item bg-light">Implementing over 15+ cost savings and future development projects across different toolsets with multiple suppliers.</li>
+                  <li class="list-group-item">Leading the entire FOUP Wash and Support team at TD, supplier management, installation, fab setup and responsible for all the
+                    troubleshooting and development across 7 Intel sites worldwide, accounting for 50+ tools.</li>
+                  
                 </ul>
               </div>
             </div>
           </div>
-        -->
         </section>
 
 
