--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" height="250px" width="auto" src="./images/asmitjainP8_1.png"
-                alt="">
+              <img class="bd-placeholder-img card-img-top" height="250px" width="auto"
+                src="./images/asmitjainP8_1.PNG" alt="">
               <div class="card-body">
                 <h5 class="card-title">Real-time Data Acquisition of Water Treatment System </h5>
                 <medium class="text-muted ">Automation | Data Acquisition | Python Programming | PowerBi</medium>
